--- a/game.html
+++ b/game.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="game.css">
+  <title>Rock Paper Scissors</title>
 </head>
 <body>
-<h1>rock paper scissor game</h1>
 
+  <h1>Rock Paper Scissors</h1>
 
-    <script src="game.js"> </script>
+  <div>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+
+  <div id="results">
+    <p id="score">Score: Human 0 - 0 Computer</p>
+    <p id="roundResult"></p>
+    <p id="winner"></p>
+  </div>
+
+  <script src="game.js"></script>
 </body>
 </html>
